# FileSnitch

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
assets/dbus/: org.filesnitch.Daemon.conf  org.filesnitch.Daemon.service
assets/desktop/: filesnitch-ui.desktop
assets/systemd/: filesnitchd.service
cli/: setup.py
cli/filesnitch_cli/: __init__.py  __main__.py  main.py  watch.py
config/: filesnitchd.toml
daemon/: Cargo.toml
daemon/src/: config.rs  dbus_interface.rs  decision.rs  event_log.rs  exclusions.rs  fanotify.rs  main.rs  process_info.rs  rules.rs
dbus/: org.filesnitch.Daemon.conf  org.filesnitch.Daemon.service
docs/plans/: 2026-02-17-filesnitch-design.md  2026-02-17-filesnitch-implementation.md
nix/: cli.nix  daemon.nix  module.nix  ui.nix
shared/: setup.py
shared/filesnitch_dbus/: __init__.py  client.py
src/: config.rs  db.rs  dbus.rs  fanotify.rs  lib.rs  matcher.rs  models.rs
src/cli/: commands.rs
src/daemon/: mod.rs
src/ui/: app.rs  mod.rs
systemd/: filesnitchd.service
ui/: setup.py
ui/filesnitch_ui/: __init__.py  __main__.py  app.py  dbus_client.py  log_page.py  main_window.py  prompt_window.py  rules_page.py  settings_page.py  tray.py
