[package]
name = "filesnitch"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Interactive file access firewall for Linux home directories"
repository = "https://example.invalid/filesnitch"

[features]
default = ["ui"]
ui = ["dep:gtk4", "dep:gio", "dep:glib"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
futures-util = "0.3"
gio = { version = "0.20", optional = true }
glib = { version = "0.20", optional = true }
globset = "0.4"
gtk4 = { version = "0.9", optional = true }
libc = "0.2"
nix = { version = "0.30", features = ["fs", "signal", "process"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
zbus = { version = "4.4", features = ["tokio"] }
zvariant = { version = "4.2", features = ["option-as-array"] }

[dev-dependencies]
tempfile = "3.16"

[[bin]]
name = "filesnitchd"
path = "src/bin/filesnitchd.rs"

[[bin]]
name = "filesnitch"
path = "src/bin/filesnitch.rs"

[[bin]]
name = "filesnitch-ui"
path = "src/bin/filesnitch-ui.rs"
required-features = ["ui"]

[package.metadata.deb]
name = "filesnitch"
maintainer = "FileSnitch Maintainers"
section = "admin"
priority = "optional"
depends = "$auto, dbus, systemd, libgtk-4-1"
assets = [
  ["target/release/filesnitchd", "usr/bin/", "755"],
  ["target/release/filesnitch", "usr/bin/", "755"],
  ["target/release/filesnitch-ui", "usr/bin/", "755"],
  ["assets/systemd/filesnitchd.service", "lib/systemd/system/", "644"],
  ["assets/dbus/org.filesnitch.Daemon.service", "share/dbus-1/system-services/", "644"],
  ["assets/desktop/filesnitch-ui.desktop", "usr/share/applications/", "644"]
]
